# tvd

./: .gitignore  README.md
tool/fakeconnector/: CMakeLists.txt  README  deps.cmake  sources.cmake
tool/fakeconnector/lua/: connector_loop.lua  example01.lua  feedsSender.lua  testCocineros.lua  testPartido.lua
tool/fakeconnector/src/: fakeconnector.cpp  fakeconnector.h
tool/fakeconnector/src/lua/: connector.cpp  connector.h
tool/ginga/: CMakeLists.txt  cpack.GINGA_PACKAGE_VS.cmake  deps.cmake  ginga.exe.manifest  ginga.rc  install.GINGA_PACKAGE_ANDROID.cmake  install.GINGA_PACKAGE_MINGW.cmake  sources.cmake  version.cmake
tool/ginga/doc/dev/: ginga.tex
tool/ginga/doc/resources/: ginga-modules.dia  uml-sequence-diagram-ginga-run.eps  uml-sequence-diagram-keyPress1.eps  uml-sequence-diagram-keyPress2.eps  uml-sequence-diagram-playerCreate.eps
tool/ginga/doc/umlet/: uml-sequence-diagram-ginga-run.uxf  uml-sequence-diagram-keyPress.uxf  uml-sequence-diagram-playerCreate.uxf
tool/ginga/examples/LoadingApplication/: LoadingAnimation.lua  loading.ncl
tool/ginga/examples/cocineros/: cocineros.ncl  main.lua
tool/ginga/examples/feeds/: app.lua  feeds.ncl
tool/ginga/examples/keys/: keys.ncl  main.lua
tool/ginga/examples/partido/: main.lua  partido.ncl
tool/ginga/examples/sokoban/: main.lua  sokoban.ncl
tool/ginga/examples/vresize/: vresize.ncl
tool/ginga/src/: ginga.cpp  ginga.h
tool/htmlshellremote/: CMakeLists.txt  GenerateNodeModule.cmake  deps.cmake  htmlshell.proto  sources.cmake  version.cmake
tool/htmlshellremote/htmlshellmock/: deps.cmake  sources.cmake
tool/htmlshellremote/htmlshellmock/src/: shell.cpp
tool/htmlshellremote/node/: package.json
tool/htmlshellremote/node/src/: htmlshellremote.js
tool/htmlshellremote/node/test/: htmlshellremote.js
tool/htmlshellremote/src/: extension.cpp  extension.h
tool/htmlshellremote/test/: deps.cmake  sources.cmake
tool/htmlshellremote/test/src/: extension.cpp  extension.h  main.cpp
tool/testplatform/: CMakeLists.txt  deps.cmake  sources.cmake
tool/testplatform/config/: canvas.imageformats.xml  display.connectors.component.xml  display.connectors.composite.xml  display.connectors.hdmi.xml  mediaplayer.formats.sound.xml  mediaplayer.formats.video.xml
tool/testplatform/doc/: testplatform.tex
tool/testplatform/imgs/: image.tiff
tool/testplatform/media/: media.aac  media.avi  media.divx3  media.divx4  media.divx5  media.flac  media.flv  media.m2ts  media.mkv  media.mov  media.mp2  media.mpeg  media.pcm  media.rm  media.rmvb  media.ts  media.vob  media.wma  media.wmv  media.xvid
tool/testplatform/src/: mediaplayerstep.cpp  mediaplayerstep.h  mute.cpp  mute.h  step.cpp  step.h  test.cpp  test.h  testlog.cpp  testlog.h  testplatform.cpp  testplatform.h  types.h  util.cpp  util.h  volume.cpp  volume.h
tool/testplatform/src/canvas/: canvas.cpp  canvas.h  composition.cpp  composition.h  format.cpp  format.h
tool/testplatform/src/display/: aspect.cpp  aspect.h  modes.cpp  modes.h
tool/testplatform/src/dvb/: download.cpp  download.h  scan.cpp  scan.h  signal.cpp  signal.h  video.cpp  video.h
tool/testplatform/src/input/: map.cpp  map.h
tool/testplatform/src/mediaplayer/: format.cpp  format.h  mediaend.cpp  mediaend.h  mute.cpp  mute.h  resize.cpp  resize.h  volume.cpp  volume.h
tool/testplatform/src/mixer/: mute.cpp  mute.h  output.cpp  output.h  volume.cpp  volume.h
tool/wari/: CMakeLists.txt  cpack.WARI_PACKAGE_DEBIAN.cmake  cpack.WARI_PACKAGE_VS.cmake  deps.cmake  install.WARI_PACKAGE_UNIX.cmake  install.WARI_PACKAGE_VS.cmake  sources.cmake  version.cmake  wari.desktop.cin  wari.rc
tool/wari/debian/: postinst  prerm
tool/wari/doc/: wari.tex
tool/wari/doc/dev/: wari.tex
tool/wari/doc/resources/: About.eps  BtnCanalesLista.eps  BtnCanalesScan.eps  BtnPantallaCerrar.eps  BtnPantallaCompleta.eps  BtnPantallaMinimizar.eps  BtnVol.eps  BtnVolumen.eps  DescargandoApp.eps  ListaCanales.eps  LogoWariVicuna.eps  Player-Referencias.eps  Player-Scan.eps  inicio.eps  inicio1.eps  lifialogo.eps  navAntSig.eps
tool/wari/lua/: about.lua  applist.lua  audio.lua  cc.lua  channellist.lua  downloadapplication.lua  epg.lua  group.lua  menu.lua  model.lua  root.lua  scan.lua  util.lua  wari.lua
tool/wari/lua/widgets/: background.lua  button.lua  label.lua  list.lua  logocontainer.lua  notification.lua  progressbar.lua  schedule.lua  scrollbar.lua  slider.lua  text.lua  widget.lua  window.lua
tool/wari/src/: wari.cpp  wari.h
tool/zamba/: CMakeLists.txt  config.h.cin  deps.ZAMBA_SCRIPTS_AML.cmake  deps.cmake  sources.cmake
tool/zamba/apps/ahorcado/: ahorcado.zmb
tool/zamba/apps/audimetro/: audimetro.zmb
tool/zamba/apps/cda/: cda.zmb
tool/zamba/apps/ginga/: ginga.zmb
tool/zamba/doc/dev/: zamba.tex
tool/zamba/doc/resources/: uml-sequence-diagram-zapper-change-channel.eps  uml-sequence-diagram-zapper-start-ginga.eps
tool/zamba/doc/umlet/: uml-sequence-diagram-zapper-change-channel.uxf  uml-sequence-diagram-zapper-start-ginga.uxf
tool/zamba/doc/user/: zamba.tex
tool/zamba/imgs/: splash.vbs
tool/zamba/lua/: banish_mixin.lua  basewidget.lua  caption.lua  change_channel.lua  channel_list.lua  channel_list_window.lua  chs.lua  colors.lua  content_categories.lua  download.lua  epg.lua  firmupdate.lua  ginga_window.lua  info.lua  l_util.lua  log.lua  lua_menu.lua  mute.lua  nav.lua  pin.lua  proxy.lua  rootnav.lua  security.lua  spinner.lua  style.lua  timer.lua  toggles.lua  volume.lua  widget.lua  zamba.lua  zindex.lua
tool/zamba/lua/application/: application.lua  controller.lua  manager.lua  sandbox.lua  surface.lua  window.lua  zmb_apps.lua
tool/zamba/lua/info_boxes/: common_info.lua  info_extended.lua  info_standard.lua  info_zapping.lua  layout.lua
tool/zamba/lua/menu/: about.lua  channels.lua  config.lua  config_page.lua  usb.lua
tool/zamba/lua/models/: applications_download.lua  channel.lua  media_file.lua  scan.lua  volume.lua
tool/zamba/lua/widgets/: alert.lua  confirmation.lua  progressbar.lua  videoplayer.lua
tool/zamba/src/: lzapper.cpp  lzapper.h
(+4827 files in other folders)
